"basic functionality for creating users"